Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110258

CharacterController doesn't trigger TriggerBody

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.5.0, 6.6.0
    • 6.5
    • Quick: 3D Physics
    • None
    • 3e28d7ce9 (dev), 7fa92bfe9 (6.5), 45584cbfc (dev), 002cb76ed (6.5)

      A QML scene with a trigger body and a character controller will cause a crash when the character controller tries to enter the trigger body. Edit: The crash is fixed by a nullptr check, but now the trigger needs to be fixed.

        For Gerrit Dashboard: QTBUG-110258
        # Subject Branch Project Status CR V

            tvete Paul Olav Tvete
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes