Avoid crash when CharacterController hits TriggerBody

This is just a workaround for the crash. Collisions
between character controllers and trigger bodies will now
just be ignored.

Task-number: QTBUG-110258
Pick-to: 6.5
Change-Id: I4106f8ded1077db5c82b9fff4775c1795c53334d
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>